# elf2_project

./: .gitattributes  .gitignore  LICENSE  README.md  SOURCE_MANIFEST.txt  inspect_region_bridge.py  start_agent.sh
M3Pro_ws/src/M3Pro/: CMakeLists.txt
M3Pro_ws/src/calibration/: setup.py
M3Pro_ws/src/multi_brains/: setup.cfg  setup.py
cloud/: PROMPT_DRAFT_DO_NOT_USE.md  README.md  ai_analyzer.py  config.py  database.py  inspect_result_utils.py  main.py  mock_sender.py  models.py  mqtt_client.py  requirements.txt  start.bat  start_server.py  ws_manager.py
cloud/maps/: map_20260323_203259.pgm  map_20260323_203259.yaml  map_20260324_211700.yaml  test_map.pgm
cloud/routers/: ai.py  detection.py  map.py  media.py  patrol.py  robot.py  sensor.py  settings.py  zone.py
cloud/simulator/: esp32_simulator.py  robot_simulator.py
cloud/static/: index.html
cloud/static/maps/: greenhouse_map.pgm  greenhouse_map.yaml
cloud/tools/: cloud_voice_tts_node.py  generate_greenhouse_map.py  inspect_region_bridge.py  new_cloud_robot_bridge.py
elf2_official_sort_ws/src/M3Pro_demo/: package.xml  setup.py
elf2_official_sort_ws/src/M3Pro_demo/M3Pro_demo/: blue_colorHSV.text  color_common.py  color_recognize.py  deliver_block.py  grasp_desktop.py  green_colorHSV.text  place_block.py  red_colorHSV.text  yellow_colorHSV.text
elf2_official_sort_ws/src/M3Pro_demo/transforms3d/: __init__.py  affines.py  euler.py  quaternions.py
elf2_strawberry_ws/src/strawberry_inference/: MODEL_DEPLOYMENT.md  package.xml  setup.cfg  setup.py
elf2_strawberry_ws/src/strawberry_interfaces/: CMakeLists.txt  package.xml
elf2_strawberry_ws/src/strawberry_mission_bt/: package.xml  setup.cfg  setup.py
elf2_strawberry_ws/src/strawberry_tracker/: package.xml  setup.py
elf2_strawberry_ws/src/strawberry_tracker.bak_before_arm_20260624_215722/: package.xml  setup.cfg  ��Ŀ����.md
elf2_strawberry_ws/src/strawberry_tracker/config/: tracker_params.yaml  tracker_params.yaml.bak_arm_
elf2_strawberry_ws/src/strawberry_tracker/launch/: tracker.launch.py
elf2_strawberry_ws/src/strawberry_tracker/strawberry_tracker/: strawberry_tracker_node.py  strawberry_tracker_node.py.bak_arm_
embedded_project/项目源码/orin版本源码/m3pro_ws/m3pro_ws/src/time_restamp/: CMakeLists.txt  package.xml
embedded_project/项目源码/orin版本源码/m3pro_ws/m3pro_ws/src/time_restamp/src/: time_restamp_node.cpp
m3pro_nav_map/: yahboom_map.pgm  yahboom_map.yaml
strawberry_models/Disease/: best_int8.rknn  board_compare_disease.py  board_validate_disease.py  call_infer_batch.py  call_infer_service.py  disease_classes.json  strawberry.yaml  summarize_generic_disease.py
strawberry_models/Disease/board_validation/: compare_report.txt  fp_predictions.json  fp_sim_predictions.json  int8_predictions.json  service_batch_results.json
strawberry_models/Disease/generic_int8_test/: angular_leafspot351.json  anthracnose_fruit_rot83.json  blossom_blight147.json  gray_mold393.json  leaf_spot1.json  powdery_mildew_fruit123.json  powdery_mildew_leaf375.json
(+77 files in other folders)
