<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>M3Pro_demo</name>
  <version>0.0.0</version>
  <description>Official Yahboom M3Pro color sorting demo isolated for ELF2 testing.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>arm_interface</exec_depend>
  <exec_depend>arm_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
