<?xml version="1.0"?>
<package format="3">
  <name>time_restamp</name>
  <version>0.0.1</version>
  <description>Restamp MCU-stamped topics with PC node time</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
